force-app/main/default/objects/RW_Exhibition__c/RW_Exhibition__c.object-meta.xml
<CustomObject>
    <label>Exhibition</label>
    <nameField>
        <displayFormat>EX-{0000}</displayFormat>
        <label>Exhibition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exhibitions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>