force-app/main/default/objects/RW_Exhibition__c/fields/RW_Accounts__c.field-meta.xml
<CustomField>
    <fullName>RW_Accounts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Exhibitions</relationshipLabel>
    <relationshipName>Exhibitions</relationshipName>
    <type>Lookup</type>
</CustomField>