force-app/main/default/objects/RW_Exhibition__c/fields/RW_Exhibition_Master__c.field-meta.xml
<CustomField>
    <fullName>RW_Exhibition_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exhibition Master</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>RW_Exhibition_Master__c.RW_Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>RW_Exhibition_Master__c</referenceTo>
    <relationshipLabel>Exhibitions</relationshipLabel>
    <relationshipName>Exhibitions</relationshipName>
    <type>Lookup</type>
</CustomField>