force-app/main/default/objects/RW_Exhibition__c/fields/RW_I_m_Coming__c.field-meta.xml
<CustomField>
    <fullName>RW_I_m_Coming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>I&apos;m Coming</label>
    <type>Checkbox</type>
</CustomField>